Block ApplicationContainer#withReuse(true)